# ijkmeshinfo

./: CMakeLists.txt  INSTALL  README  ijk.txx  ijkIO.txx  ijkcoord.txx  ijkcube.txx  ijkdatatable.txx  ijkhash.txx  ijklist.txx  ijkmesh.txx  ijkmesh_datastruct.txx  ijkmesh_faces.txx  ijkmeshinfo.cxx  ijkmeshinfo.h  ijkmeshinfoIO.cxx  ijkmeshinfoIO.h  ijkmeshinfoIO.txx  ijkmeshinfo_compute.cxx  ijkmeshinfo_compute.h  ijkmeshinfo_compute.txx  ijkprint.txx
